--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,7 +15,12 @@
 <ion-content padding>
   <div [ngSwitch]="view">
     <ion-list *ngSwitchCase="'chats'" no-lines>
-      <ion-item>Chats</ion-item>
+      <button ion-item *ngFor="let c of chats | async">{{c.title}}
+        <p *ngIf="c.lastMessage; else customMessage">{{c.timestamp | date:'dd/MM/y H:mm'}} - {{c.lastMessage}}</p>
+        <ng-template #customMessage>
+          <p>No messages</p>
+        </ng-template>
+      </button>
     </ion-list>
     <ion-list *ngSwitchCase="'users'">
         <ion-list no-lines>
